mise en place mediaqueries MOBILE FIRST

--- a/css/screen.css
+++ b/css/screen.css
@@ -1358,6 +1358,282 @@ p {
   grid-area: l-section-ajouts;
 }
 
+/* ICI commence le scss de _m-realisations */
+.yellow {
+  background-color: #fcffa4;
+}
+
+.backimage > img {
+  max-width: 49%;
+  left: 139px;
+  top: -36px;
+}
+
+.coverrelatif img {
+  max-width: 50%;
+}
+
+.coverrelatif {
+  left: 170px;
+  bottom: 222px;
+}
+
+.coverrelatif-ter {
+  bottom: -317px;
+  left: 10px;
+}
+
+/* version petite tablette */
+@media screen and (min-width: 600px) {
+  .backimage > img {
+    max-width: 104%;
+    left: 25px;
+    top: -22px;
+  }
+
+  .coverrelatif {
+    left: 27px;
+    bottom: 136px;
+  }
+
+  .coverrelatif img {
+    max-width: 41%;
+  }
+
+  .coverrelatif-ter {
+    left: 76px;
+  }
+}
+/* grande TABLETTE */
+@media screen and (min-width: 740px) {
+  .coverrelatif {
+    left: 52px;
+    bottom: 190px;
+  }
+
+  .coverrelatif-second {
+    left: -34px;
+    bottom: 121px;
+  }
+
+  .coverrelatif-ter {
+    left: 123px;
+    bottom: -126px;
+  }
+
+  .coverrelatif img {
+    max-width: 65%;
+  }
+
+  .backimage > img {
+    left: 34px;
+    max-width: 65%;
+    top: -42px;
+  }
+
+  .backimage-second img {
+    max-width: 100%;
+    left: -20px;
+    top: -213px;
+  }
+}
+/* petit PC portable */
+@media screen and (min-width: 799px) {
+  .grid-containerAmoi {
+    display: grid;
+    grid-template-columns: 20% 13% 7% 15% 30% 15%;
+  }
+
+  .grid-containerAmoi > * {
+    padding-left: 10px;
+  }
+
+  .lime {
+    border: 4px dashed lime;
+    margin: 15px;
+  }
+
+  .bordure {
+    border: 1px dotted red;
+  }
+
+  span {
+    text-transform: capitalize;
+    font-weight: 800;
+  }
+
+  .backimage {
+    padding-left: 10px;
+  }
+
+  .backimage > img {
+    position: relative;
+    left: -33px;
+    max-width: 51%;
+    top: -21px;
+  }
+
+  .coverimage {
+    position: absolute;
+  }
+
+  .coverimage-second {
+    position: absolute;
+  }
+
+  .coverrelatif {
+    position: relative;
+    left: 88px;
+    bottom: 304px;
+  }
+
+  .coverrelatif-second {
+    position: relative;
+    left: -34px;
+    bottom: 176px;
+  }
+
+  .coverrelatif-ter {
+    position: relative;
+    left: 230px;
+    bottom: -20px;
+  }
+
+  .coverrelatif img {
+    max-width: 100%;
+  }
+
+  .coverrelatif-second img {
+    max-width: 30%;
+  }
+
+  .coverrelatif-ter img {
+    max-width: 50%;
+  }
+
+  .backimage-second {
+    padding-left: 10px;
+    margin-left: 20px;
+  }
+
+  .backimage-second img {
+    max-width: 68%;
+    position: relative;
+    left: -17px;
+    top: -147px;
+  }
+}
+.item-1 {
+  margin-bottom: 20px;
+}
+
+.item-2 {
+  grid-column: 1/7;
+  grid-row: 3/6;
+  margin-top: 30px;
+}
+
+.item-3 {
+  grid-column: 1/7;
+  grid-row: 4/6;
+  margin-bottom: 30px;
+}
+
+.item-4 {
+  grid-column: 2/7;
+  grid-row: 7/8;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  z-index: 4;
+}
+
+.item-5 {
+  display: none;
+}
+
+.item-6 {
+  grid-column: 1/7;
+  grid-row: 8/10;
+  margin-bottom: 10px;
+  margin-top: 90px;
+}
+
+/* version petite tablette */
+@media screen and (min-width: 600px) {
+  .item-1 {
+    grid-column: 1/7;
+    grid-row: 2/3;
+  }
+
+  .item-3 {
+    grid-column: 5/7;
+  }
+
+  .item-4 {
+    grid-column: 2/7;
+  }
+}
+/* grande TABLETTE */
+@media screen and (min-width: 740px) {
+  .item-3 {
+    grid-column: 4/7;
+  }
+
+  .item-5 {
+    grid-column: 6/7;
+    grid-row: 5/9;
+    background-color: wheat;
+    z-index: 5;
+    padding-top: 30px;
+  }
+}
+/* petit PC portable */
+@media screen and (min-width: 799px) {
+  .item-1 {
+    grid-column: 5/7;
+    grid-row: 2/3;
+    background: orange;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    margin-top: 20px;
+  }
+
+  .item-2 {
+    grid-column: 1/3;
+    grid-row: 3/11;
+    background: lightgray;
+    margin-bottom: 10px;
+  }
+
+  .item-3 {
+    grid-column: 4/6;
+    grid-row: 4/5;
+    margin-bottom: 30px;
+  }
+
+  .item-4 {
+    grid-column: 2/6;
+    grid-row: 6/7;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-right: 20px;
+    background-color: blanchedalmond;
+    z-index: 4;
+  }
+
+  .item-5 {
+    grid-column: 6/7;
+    grid-row: 5/9;
+    z-index: 5;
+    padding-top: 30px;
+  }
+
+  .item-6 {
+    grid-column: 4/6;
+    grid-row: 8/10;
+    margin-bottom: 10px;
+  }
+}
 /********************wrapper********************/
 .wrapper {
   /********************section contact********************/
