--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -24,6 +24,9 @@
 /*modules*/
 @import "modules/_m-home";
 @import "modules/_m-home-grid";
+
 @import "modules/_m-realisations";
+@import "modules/m-realisations-grid";
+
 @import "modules/_m-catalogue";
 @import "modules/_m-contact";
