--- a/css/screen.css
+++ b/css/screen.css
@@ -1772,13 +1772,238 @@ footer .l-footer .section__footer--right .btn--footer {
     width: 10rem;
   }
 }
-/* line 1072, ../sass/modules/_m-home.scss */
+/* line 1069, ../sass/modules/_m-home.scss */
 .wrap .section__realisations .l-section--realisations {
   grid-area: l-section-realisations;
 }
-/* line 1077, ../sass/modules/_m-home.scss */
+/* line 1074, ../sass/modules/_m-home.scss */
 .wrap .section__ajouts .l-section--ajouts {
   grid-area: l-section-ajouts;
+}
+/* line 1077, ../sass/modules/_m-home.scss */
+.wrap .section__detail--footer {
+  margin: auto;
+  display: block;
+  padding-top: 4rem;
+}
+@media screen and (min-width: 768px) {
+  /* line 1077, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer {
+    height: auto;
+    margin-top: auto;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 1077, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer {
+    background: none;
+    height: auto;
+  }
+}
+/* line 1097, ../sass/modules/_m-home.scss */
+.wrap .section__detail--footer .title__primary {
+  font-style: italic;
+  margin: 3rem auto 1rem auto;
+  text-align: left;
+  color: #033752;
+  width: 100%;
+  font-size: 30px;
+}
+/* line 1106, ../sass/modules/_m-home.scss */
+.wrap .section__detail--footer .title__primary span {
+  border-bottom: solid 3px #4eb748;
+  color: #033752;
+  font-weight: bold;
+  font-style: normal;
+}
+@media screen and (min-width: 768px) {
+  /* line 1097, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .title__primary {
+    margin: 1rem auto -4rem auto;
+    font-size: 30px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 1097, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .title__primary {
+    margin: 3rem auto auto auto;
+    font-size: 30px;
+    text-align: left;
+    width: auto;
+    line-height: 2rem;
+  }
+}
+/* line 1127, ../sass/modules/_m-home.scss */
+.wrap .section__detail--footer .crl--green {
+  font-style: normal;
+  width: 100%;
+  margin: auto auto auto auto;
+  text-align: left;
+  color: #033752;
+  line-height: 2rem;
+  font-size: 20px;
+  font-weight: bold;
+}
+/* line 1141, ../sass/modules/_m-home.scss */
+.wrap .section__detail--footer .crl--green span {
+  color: #4eb748;
+  font-weight: normal;
+}
+@media screen and (min-width: 768px) {
+  /* line 1127, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .crl--green {
+    margin: 7rem auto auto 0;
+    font-size: 22px;
+    max-width: auto;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 1127, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .crl--green {
+    margin: 2rem auto 2rem 0;
+    font-size: 24px;
+    text-align: left;
+    width: auto;
+    max-width: auto;
+    line-height: 2rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 1127, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .crl--green {
+    width: 50%;
+    font-size: 28px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 1127, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .crl--green {
+    margin-right: 4rem;
+    font-size: 28px;
+    width: 45%;
+  }
+}
+/* line 1180, ../sass/modules/_m-home.scss */
+.wrap .section__detail--footer .cadre__detail {
+  display: flex;
+}
+@media screen and (min-width: 1280px) {
+  /* line 1180, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .cadre__detail {
+    margin: auto;
+    height: auto;
+  }
+}
+/* line 1190, ../sass/modules/_m-home.scss */
+.wrap .section__detail--footer .cadre__detail .txt__liner--green-2 {
+  margin: 1.5rem auto auto auto;
+  text-align: left;
+  color: #033752;
+  max-width: auto;
+  font-size: 20px;
+  width: auto;
+  line-height: 2rem;
+}
+/* line 1200, ../sass/modules/_m-home.scss */
+.wrap .section__detail--footer .cadre__detail .txt__liner--green-2 span {
+  border-bottom: solid 3px #4eb748;
+  color: #033752;
+  font-style: normal;
+}
+@media screen and (min-width: 768px) {
+  /* line 1190, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .cadre__detail .txt__liner--green-2 {
+    margin: 2rem auto auto auto;
+    font-size: 20px;
+    text-align: auto;
+    width: auto;
+    line-height: 2rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 1190, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .cadre__detail .txt__liner--green-2 {
+    padding-bottom: 5rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 1190, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .cadre__detail .txt__liner--green-2 {
+    width: 100%;
+    margin: 0;
+    height: auto;
+    margin-right: 4rem;
+  }
+}
+@media screen and (min-width: 1420px) {
+  /* line 1190, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .cadre__detail .txt__liner--green-2 {
+    width: 100%;
+    margin: 0;
+    height: 50vh;
+    margin-right: 4rem;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 1190, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .cadre__detail .txt__liner--green-2 {
+    width: 100%;
+    margin: 0;
+    height: 50vh;
+    margin-right: 17rem;
+  }
+}
+/* line 1247, ../sass/modules/_m-home.scss */
+.wrap .section__detail--footer .cadre__detail .img--detail {
+  background-image: url("../img/Cadre-detail.png");
+  display: none;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: auto;
+  margin-top: 10rem;
+}
+@media screen and (min-width: 1280px) {
+  /* line 1247, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .cadre__detail .img--detail {
+    display: block;
+    justify-content: space-between;
+    margin-top: -10rem;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 1247, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .cadre__detail .img--detail {
+    margin-top: -14rem;
+  }
+}
+/* line 1277, ../sass/modules/_m-home.scss */
+.wrap .section__detail--footer .btn--detail {
+  margin: 2rem auto auto 0rem;
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  /* line 1277, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .btn--detail {
+    margin: 2rem auto auto 0rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 1277, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .btn--detail {
+    margin: 3rem auto auto 0rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 1277, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .btn--detail {
+    margin: -5rem auto auto 25rem;
+  }
+}
+@media screen and (min-width: 1920px) {
+  /* line 1277, ../sass/modules/_m-home.scss */
+  .wrap .section__detail--footer .btn--detail {
+    margin: -7rem auto auto 35rem;
+  }
 }
 
 /********************wrapper********************/
